--- a/styles.css
+++ b/styles.css
@@ -1,169 +1,118 @@
-.submit-button {
-    background-color: greenyellow;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.company-logo-div {
-    width: 200px;
-    margin-left: 130px;
+body, html {
+    height: 100%;
+    font-family: 'Lexend Giga', sans-serif;
 }
 
-.company-logo {
-    width: 100%;
+.login-website {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 80vh;
 }
 
-.text-website {
-    font-size: 30px;
-    color: white;
-    font-family: "Lexend Giga", serif;
-    padding-left: 50px;
-    margin-top: 50px;
+.left-column {
+    background-color: rgba(0, 128, 0, 0.671);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 50%;
 }
 
-.nav-text-div-middle{
-    margin-bottom: 30px;
+.nav-text-div-middle {
+    text-align: left;
 }
 
 .text-website-middle {
     font-size: 70px;
-    color: white;
-    font-family: "Lexend Giga", serif;
+    color: #ffffff;
 }
 
-.navbar {
- background-color: rgb(20, 173, 0);
- height: 70px;
- border-radius: 5px;
+.text-website-middle-description {
+    font-size: 20px;
+    color: black;
+    text-align: left;
 }
 
-.nav-logo-div {
-    display: inline-block;
-}
-
-.logo {
-    width: 50px;
-}
-
-.user_input {
-    display: inline-block;
-}
-
-.form-group {
-    margin-left: 1100px;
-}
-
-html {
-    background-color: #62fa43;
-}
-  
-body {
-    font-family: "Poppins", sans-serif;
-    height: 100vh;
-}
-  
-a {
-    color: #92badd;
-    display:inline-block;
-    text-decoration: none;
-    font-weight: 400;
-}
-  
-h2 {
-    text-align: center;
-    font-size: 16px;
-    font-weight: 600;
-    text-transform: uppercase;
-    display:inline-block;
-    margin: 40px 8px 10px 8px; 
-    color: #cccccc;
-}
-
-  
-.wrapper {
+.right-column {
+    background-color: rgba(0, 128, 0, 0.671);
     display: flex;
+    padding-left: 20%;
     align-items: center;
-    flex-direction: column; 
-    justify-content: center;
-    width: 100%;
-    min-height: 100%;
-    padding: 20px;
 }
-  
-#formContent {
-    -webkit-border-radius: 10px 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-    background: #fff;
-    padding: 30px;
-    width: 100%;
-    max-width: 480px;
-    position: relative;
-    padding: 0px;
-    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    text-align: center;
-}
-  
-#formFooter {
-    background-color: #f6f6f6;
-    border-top: 1px solid #dce8f1;
-    padding: 25px;
-    text-align: center;
-    -webkit-border-radius: 0 0 10px 10px;
-    border-radius: 0 0 10px 10px;
-}
-  
-h2.inactive {
-    color: #cccccc;
-}
-  
-h2.active {
-    color: #0d0d0d;
-    border-bottom: 2px solid #5fbae9;
-}
-  
-input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #47fa00;
-    border: none;
-    color: white;
-    padding: 15px 80px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
 
+.wrapper {
+    width: 100%;
+    max-width: 400px;
 }
-  
-input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #2e7e00;
+
+#formContent {
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-  
-input[type=text] {
-    background-color: #f6f6f6;
-    border: none;
-    color: #0d0d0d;
-    padding: 15px 32px;
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.bottom-block {
+    background-color: #BDE9C9;
+    height: 500px;
+}
+
+.create-button {
+    margin-top: 10px;
+    background-color: rgba(0, 128, 0, 0.671);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    width: 200px;
+    height: 35px;
+}
+
+.create-button:hover {
+    background-color: rgb(0, 128, 0);
+}
+
+input[type="text"], input[type="submit"] {
+    margin: 10px 0;
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="submit"] {
+    margin-top: 10px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+#formFooter {
+    margin-top: 25px;
     text-align: center;
+}
+
+.underlineHover {
+    color: #007bff;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 5px;
-    width: 85%;
-    border: 2px solid #f6f6f6;
-    -webkit-border-radius: 5px 5px 5px 5px;
-    border-radius: 5px 5px 5px 5px;
-  }
-  
-input[type=text]:focus {
-    background-color: #fff;
-    border-bottom: 2px solid #5fbae9;
+    font-size: 0.9rem;
+    text-align: center;
 }
-  
-input[type=text]:placeholder {
-    color: #cccccc;
+
+.underlineHover:hover {
+    text-decoration: underline;
 }
-  
-  
