--- a/Module 4 Machine Problem - S3 Technical/styles.css
+++ b/Module 4 Machine Problem - S3 Technical/styles.css
@@ -23,19 +23,33 @@ body {
     border-radius: 8px;
     margin-bottom: 10px;
 }
+
 .buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
     gap: 10px;
 }
+
+.equal {
+    grid-row: span 2;
+    grid-column: 4;
+    height: 100%;  /* Ensure full height */
+    display: flex;
+    align-items: center; /* Stretch vertically */
+    justify-content: center;
+}
+
+
+.normal-box {
+    grid-column: span 1; 
+    grid-row: span 1; 
+}
+
 .zero {
     grid-column: span 2;
 }
 
-.equal {
-    grid-row: span 3;
-}
 button {
     width: 100%;
     height: 60px;
@@ -46,6 +60,7 @@ button {
     background: #f3f3f3;
     transition: 0.2s;
 }
+
 button:hover {
     background: #ddd;
 }
