--- a/Module 4 Machine Problem - S3 Technical/styles.css
+++ b/Module 4 Machine Problem - S3 Technical/styles.css
@@ -3,15 +3,16 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to right, #57C1EB, #246FA8);
+    background: linear-gradient(to right, #61d0ff, #55ff7a);
 }
+
 .calculator {
     background: white;
     padding: 20px;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
+
 .display {
     width: 100%;
     height: 50px;
@@ -19,24 +20,24 @@ body {
     text-align: right;
     padding: 10px;
     border: none;
-    background: #eee;
-    border-radius: 8px;
+    background-color: #332929b0;
+    color: white;
     margin-bottom: 10px;
 }
 
 .buttons {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 10px;
 }
 
 .equal {
     grid-row: span 2;
     grid-column: 4;
-    height: 100%;  /* Ensure full height */
+    height: 100%;
     display: flex;
-    align-items: center; /* Stretch vertically */
+    align-items: center; 
     justify-content: center;
 }
 
@@ -62,5 +63,6 @@ button {
 }
 
 button:hover {
-    background: #ddd;
+    background: black;
+    color: white;
 }
