--- a/Module 4 Machine Problem - S3 Technical/styles.css
+++ b/Module 4 Machine Problem - S3 Technical/styles.css
@@ -34,13 +34,11 @@ body {
 
 .equal {
     grid-row: span 2;
-    grid-column: 4;
     height: 100%;
     display: flex;
     align-items: center; 
     justify-content: center;
 }
-
 
 .normal-box {
     grid-column: span 1; 
@@ -54,15 +52,16 @@ body {
 button {
     width: 100%;
     height: 60px;
-    font-size: 20px;
+    font-size: 1.8rem;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    background: #f3f3f3;
+    background: #ffffff;
     transition: 0.2s;
 }
 
 button:hover {
     background: black;
     color: white;
+    border-radius: 50%;
 }
