--- a/Module 5 6 Machine Problem - S4 Technical/styles.css
+++ b/Module 5 6 Machine Problem - S4 Technical/styles.css
@@ -1,46 +1,82 @@
 body {
-    background-image: url(assets/image.png);
+    font-family: Arial, sans-serif;
+    background-image: url('assets/image.png');
     background-size: cover;
-    margin: 0px 100px 0px 100px;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+    margin: 0;
+    padding: 0;
 }
 
-.mainmenu-button {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 30vh;
-}
-
-.mainmenu-button button {
-    background-color: yellow;
-    border-radius: 25%;
-    font-size: 1.1rem;
-    height: 3.7rem;
-    width: 9.4rem;
-    cursor: pointer;
-}
-
-.container {
-    width: 50%;
-    display: flex;
-    justify-content: space-evenly;
+.title h1 {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 2.5rem;
+    text-transform: uppercase;
 }
 
 .card {
-    background-color: white;
-    width: 200px;
-    height: 500px;
+    position: relative;
+    overflow: hidden;
+    border: none;
+    cursor: pointer;
 }
 
-.food_name {
-    background-color: yellow;
-    margin: 3px;
-    padding: 5px 0px 5px 0px;
-    font-size: 1.5rem;
-    text-align: center;
+.card img {
     width: 100%;
+    height: auto;
+    display: block;
+    transition: transform 0.3s ease-in-out;
 }
 
-.food_img {
-
+.card-overlay {
+    position: absolute;
+    bottom: -50px;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    padding: 10px;
+    color: white;
+    font-size: 18px;
+    transition: bottom 0.3s ease-in-out;
 }
+
+.card:hover .card-overlay {
+    bottom: 0;
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: start;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.modal-img {
+    width: 40%;
+    height: 100%;
+    object-fit: cover; 
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.modal-info {
+    width: 60%;
+    padding: 20px;
+    text-align: left;
+    overflow-y: auto;
+}
+
+.modal-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: red;
+}
+
+.modal-text {
+    font-size: 14px;
+    line-height: 1.6;
