--- a/Module 5 6 Machine Problem S4 Technical - LIGUTAN/styles.css
+++ b/Module 5 6 Machine Problem S4 Technical - LIGUTAN/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url('img/Cake\ bg.jpg') no-repeat center center fixed;
+    background: url('assets/image.png') no-repeat center center fixed;
     background-size: cover;
     color: white;
     min-height: 100vh;
